error deployment lagi

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "simple-quiz",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://muhammadsyarruri.github.io/codechamp",
   "type": "module",
   "scripts": {
     "dev": "vite",
